--- a/public/de/akne.html
+++ b/public/de/akne.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <a href="../index.html" class="back-link">← Zurück zur Übersicht</a>
-    <h1>BEHANDLUNG VON SCHWINDEL MIT TCM</h1>
+    <h1>BEHANDLUNG VON AKNE MIT TCM</h1>
     <p>Hier den Text einfügen...</p>
 </body>
 </html>
