--- a/public/de/migraene.html
+++ b/public/de/migraene.html
@@ -1,1 +1,17 @@
-test
+<!DOCTYPE html>
+<html lang="de">
+<head>
+    <meta charset="UTF-8">
+    <title>TCM Behandlung</title>
+    <style>
+        body { font-family: sans-serif; line-height: 1.6; max-width: 800px; margin: 40px auto; padding: 20px; color: #2c3e50; }
+        .back-link { text-decoration: none; color: #7fbbad; font-weight: bold; }
+        h1 { color: #1a5a7a; border-bottom: 2px solid #7fbbad; padding-bottom: 10px; text-transform: uppercase; }
+    </style>
+</head>
+<body>
+    <a href="../index.html" class="back-link">← Zurück zur Übersicht</a>
+    <h1>BEHANDLUNG VON MIGRAENE MIT TCM</h1>
+    <p>Hier den Text einfügen...</p>
+</body>
+</html>
