Add TCM treatment information for migraines

--- a/public/de/migraene.html
+++ b/public/de/migraene.html
@@ -12,6 +12,15 @@
 <body>
     <a href="../index.html" class="back-link">← Zurück zur Übersicht</a>
     <h1>BEHANDLUNG VON MIGRAENE MIT TCM</h1>
-    <p>Hier den Text einfügen...</p>
+    <p>1. Wie versteht die TCM Migräne?
+Migräne wird in der TCM als eine Störung des Energieflusses betrachtet, oft durch aufsteigendes Leber-Yang, Blutstagnation oder äußere Einflüsse verursacht. Emotionen, Ernährung und Konstitution spielen eine große Rolle.
+2. Hilft Akupunktur bei Migräne?
+Ja. Zahlreiche Studien zeigen, dass Akupunktur die Häufigkeit und Intensität von Migräneanfällen deutlich reduzieren kann – ideal für Patient:innen, die Schmerzmittel nicht vertragen oder vermeiden wollen.
+3. Wie lange muss ich behandelt werden?
+Migräne ist eine chronische Erkrankung. In der Regel empfehlen wir 1–2 Sitzungen pro Woche über 4–6 Wochen. Viele spüren bereits nach 3–4 Behandlungen eine spürbare Besserung.
+4. Was bietet die TCM noch an?
+Neben Akupunktur helfen auch Tuina-Massage, Ohrakupunktur, chinesische Kräuter, emotionale Balance und Lebensstilberatung. Ziel ist nicht nur Symptomlinderung, sondern auch Stabilisierung des ganzen Systems.
+5. Kann ich TCM mit Schulmedizin kombinieren?
+Ja. Die TCM ist eine gute Ergänzung zur westlichen Medizin. Eine kombinierte Behandlung ist in den meisten Fällen sicher und sinnvoll – bitte sprechen Sie uns an.</p>
 </body>
 </html>
