Update image URL for Migräne entry in index.html

--- a/public/index.html
+++ b/public/index.html
@@ -55,7 +55,7 @@
             title: "Spezialgebiete TCM bei folgenden Beschwerden:",
             categories: [
                 { name: "Neurologische Erkrankungen", id: "neu", items: [
-                    { name: "Migräne", url: "de/migraene.html", img: "migraene.webp", desc: "Effektive Akupunktur bei chronischer Migräne." },
+                    { name: "Migräne", url: "de/migraene.html", img: "akupunktur-migraene-zuerich.webp", desc: "Effektive Akupunktur bei chronischer Migräne." },
                     { name: "Kopfschmerzen", url: "de/kopfschmerzen.html", img: "kopfschmerzen.webp", desc: "Ganzheitliche Hilfe bei Spannungskopfschmerzen." },
                     { name: "Schwindel", url: "de/schwindel.html", img: "schwindel.webp", desc: "TCM-Therapie bei Gleichgewichtsstörungen." },
                     { name: "Tinnitus", url: "de/tinnitus.html", img: "tinnitus.webp", desc: "Natürliche Ansätze zur Linderung von Ohrgeräuschen." },
