--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
             categories: [
                 { name: "Neurologische Erkrankungen", id: "neu", items: [
                     { name: "Migräne", url: "de/migraene.html", img: "akupunktur-migraene-zuerich.webp", desc: "Effektive Akupunktur bei chronischer Migräne." },
-                    { name: "Kopfschmerzen", url: "de/kopfschmerzen.html", img: "kopfschmerzen.webp", desc: "Ganzheitliche Hilfe bei Spannungskopfschmerzen." },
+                    { name: "Kopfschmerzen", url: "de/kopfschmerzen.html", img: "akupunktur-kopfschmerzen-zuerich.webp", desc: "Ganzheitliche Hilfe bei Spannungskopfschmerzen." },
                     { name: "Schwindel", url: "de/schwindel.html", img: "schwindel.webp", desc: "TCM-Therapie bei Gleichgewichtsstörungen." },
                     { name: "Tinnitus", url: "de/tinnitus.html", img: "tinnitus.webp", desc: "Natürliche Ansätze zur Linderung von Ohrgeräuschen." },
                     { name: "Trigeminusneuralgie", url: "de/trigeminusneuralgie.html", img: "trigeminusneuralgie.webp", desc: "Schmerztherapie bei Gesichtsschmerzen." },
