--- a/public/index.html
+++ b/public/index.html
@@ -57,7 +57,7 @@
                 { name: "Neurologische Erkrankungen", id: "neu", items: [
                     { name: "Migräne", url: "de/migraene.html", img: "akupunktur-migraene-zuerich.webp", desc: "Effektive Akupunktur bei chronischer Migräne." },
                     { name: "Kopfschmerzen", url: "de/kopfschmerzen.html", img: "akupunktur-kopfschmerzen-zuerich.webp", desc: "Ganzheitliche Hilfe bei Spannungskopfschmerzen." },
-                    { name: "Schwindel", url: "de/schwindel.html", img: "schwindel.webp", desc: "TCM-Therapie bei Gleichgewichtsstörungen." },
+                    { name: "Schwindel", url: "de/schwindel.html", img: "akupunktur-schwindel-zuerich.webp", desc: "TCM-Therapie bei Gleichgewichtsstörungen." },
                     { name: "Tinnitus", url: "de/tinnitus.html", img: "tinnitus.webp", desc: "Natürliche Ansätze zur Linderung von Ohrgeräuschen." },
                     { name: "Trigeminusneuralgie", url: "de/trigeminusneuralgie.html", img: "trigeminusneuralgie.webp", desc: "Schmerztherapie bei Gesichtsschmerzen." },
                     { name: "Lähmung nach Schlaganfall", url: "de/schlaganfall-laehmung.html", img: "schlaganfall-laehmung.webp", desc: "Rehabilitation und Unterstützung der Motorik." },
