--- a/public/index.html
+++ b/public/index.html
@@ -60,7 +60,7 @@
                     { name: "Schwindel", url: "de/schwindel.html", img: "akupunktur-schwindel-zuerich.webp", desc: "TCM-Therapie bei Gleichgewichtsstörungen." },
                     { name: "Tinnitus", url: "de/tinnitus.html", img: "akupunktur-tinnitus-zuerich.webp", desc: "Natürliche Ansätze zur Linderung von Ohrgeräuschen." },
                     { name: "Trigeminusneuralgie", url: "de/trigeminusneuralgie.html", img: "akupunktur-trigeminusneuralgie-zuerich.webp", desc: "Schmerztherapie bei Gesichtsschmerzen." },
-                    { name: "Lähmung nach Schlaganfall", url: "de/schlaganfall-laehmung.html", img: "schlaganfall-laehmung.webp", desc: "Rehabilitation und Unterstützung der Motorik." },
+                    { name: "Lähmung nach Schlaganfall", url: "de/schlaganfall-laehmung.html", img: "akupunktur-schlaganfall-zuerich.webp", desc: "Rehabilitation und Unterstützung der Motorik." },
                     { name: "Blasenentleerungsstörung", url: "de/blasenentleerungsstoerung.html", img: "blasenentleerungsstoerung.webp", desc: "TCM-Regulierung der Blasenfunktion." },
                     { name: "Blasenschwäche", url: "de/blasenschwaeche.html", img: "blasenschwaeche.webp", desc: "Stärkung der Blasenmuskulatur und -kontrolle." }
                 ]},
