--- a/public/index.html
+++ b/public/index.html
@@ -62,7 +62,7 @@
                     { name: "Trigeminusneuralgie", url: "de/trigeminusneuralgie.html", img: "akupunktur-trigeminusneuralgie-zuerich.webp", desc: "Schmerztherapie bei Gesichtsschmerzen." },
                     { name: "Lähmung nach Schlaganfall", url: "de/schlaganfall-laehmung.html", img: "akupunktur-schlaganfall-zuerich.webp", desc: "Rehabilitation und Unterstützung der Motorik." },
                     { name: "Blasenentleerungsstörung", url: "de/blasenentleerungsstoerung.html", img: "akupunktur-blasenschwaeche-zuerich.webp", desc: "TCM-Regulierung der Blasenfunktion." },
-                    { name: "Blasenschwäche", url: "de/blasenschwaeche.html", img: "blasenschwaeche.webp", desc: "Stärkung der Blasenmuskulatur und -kontrolle." }
+                    { name: "Blasenschwäche", url: "de/blasenschwaeche.html", img: "akupunktur-blasenschwaeche-zuerich.webp", desc: "Stärkung der Blasenmuskulatur und -kontrolle." }
                 ]},
                 { name: "Orthopädische Erkrankungen", id: "ort", items: [
                     { name: "Lumbalgie", url: "de/lumbalgie.html", img: "lumbalgie.webp", desc: "Gezielte Hilfe bei Schmerzen im unteren Rücken." },
