--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,7 @@
                     { name: "Blasenschwäche", url: "de/blasenschwaeche.html", img: "akupunktur-blasenschwaeche-zuerich.webp", desc: "Stärkung der Blasenmuskulatur und -kontrolle." }
                 ]},
                 { name: "Orthopädische Erkrankungen", id: "ort", items: [
-                    { name: "Lumbalgie", url: "de/lumbalgie.html", img: "lumbalgie.webp", desc: "Gezielte Hilfe bei Schmerzen im unteren Rücken." },
+                    { name: "Lumbalgie", url: "de/lumbalgie.html", img: "akupunktur-lumbalgie-zuerich.jpg.webp", desc: "Gezielte Hilfe bei Schmerzen im unteren Rücken." },
                     { name: "Rückenschmerzen", url: "de/rueckenschmerzen.html", img: "rueckenschmerzen.webp", desc: "Behandlung von Verspannungen und Wirbelsäulenproblemen." },
                     { name: "Ischiasbeschwerden", url: "de/ischiasbeschwerden.html", img: "ischiasbeschwerden.webp", desc: "Linderung von Nervenschmerzen und Ausstrahlungen." },
                     { name: "Nacken-Schulter-Arm", url: "de/nacken-schulter-arm-syndrom.html", img: "nacken-schulter-arm.webp", desc: "Hilfe bei Steifheit und Schmerzen im Oberkörper." },
