--- a/public/index.html
+++ b/public/index.html
@@ -67,7 +67,7 @@
                 { name: "Orthopädische Erkrankungen", id: "ort", items: [
                     { name: "Lumbalgie", url: "de/lumbalgie.html", img: "akupunktur-lumbalgie-zuerich.jpg.webp", desc: "Gezielte Hilfe bei Schmerzen im unteren Rücken." },
                     { name: "Rückenschmerzen", url: "de/rueckenschmerzen.html", img: "akupunktur-rueckenschmerzen-zuerich.webp", desc: "Behandlung von Verspannungen und Wirbelsäulenproblemen." },
-                    { name: "Ischiasbeschwerden", url: "de/ischiasbeschwerden.html", img: "ischiasbeschwerden.webp", desc: "Linderung von Nervenschmerzen und Ausstrahlungen." },
+                    { name: "Ischiasbeschwerden", url: "de/ischiasbeschwerden.html", img: "akupunktur-ischiasbeschwerden-zuerich.webp", desc: "Linderung von Nervenschmerzen und Ausstrahlungen." },
                     { name: "Nacken-Schulter-Arm", url: "de/nacken-schulter-arm-syndrom.html", img: "nacken-schulter-arm.webp", desc: "Hilfe bei Steifheit und Schmerzen im Oberkörper." },
                     { name: "Tennis-Arm", url: "de/tennis-arm.html", img: "tennis-arm.webp", desc: "Therapie bei Epicondylitis und Sehnenreizungen." },
                     { name: "Arthritis / Arthrose", url: "de/arthritis.html", img: "arthritis.webp", desc: "Behandlung von Gelenkentzündungen und Verschleiß." },
