--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,7 @@
                     { name: "Rückenschmerzen", url: "de/rueckenschmerzen.html", img: "akupunktur-rueckenschmerzen-zuerich.webp", desc: "Behandlung von Verspannungen und Wirbelsäulenproblemen." },
                     { name: "Ischiasbeschwerden", url: "de/ischiasbeschwerden.html", img: "akupunktur-ischiasbeschwerden-zuerich.webp", desc: "Linderung von Nervenschmerzen und Ausstrahlungen." },
                     { name: "Nacken-Schulter-Arm", url: "de/nacken-schulter-arm-syndrom.html", img: "akupunktur-nacken-schulter-arm-syndrom-zuerich.webp", desc: "Hilfe bei Steifheit und Schmerzen im Oberkörper." },
-                    { name: "Tennis-Arm", url: "de/tennis-arm.html", img: "tennis-arm.webp", desc: "Therapie bei Epicondylitis und Sehnenreizungen." },
+                    { name: "Tennis-Arm", url: "de/tennis-arm.html", img: "akupunktur-tennisarm-zuerich.webp", desc: "Therapie bei Epicondylitis und Sehnenreizungen." },
                     { name: "Arthritis / Arthrose", url: "de/arthritis.html", img: "arthritis.webp", desc: "Behandlung von Gelenkentzündungen und Verschleiß." },
                     { name: "Rheuma", url: "de/rheuma.html", img: "rheuma.webp", desc: "Ganzheitliche Begleitung bei rheumatischen Erkrankungen." },
                     { name: "Achillessehnen-Symptome", url: "de/achillessehnen-symptome.html", img: "achillessehnen.webp", desc: "Heilungsförderung bei Sehnenbeschwerden." },
