--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                     { name: "Nacken-Schulter-Arm", url: "de/nacken-schulter-arm-syndrom.html", img: "akupunktur-nacken-schulter-arm-syndrom-zuerich.webp", desc: "Hilfe bei Steifheit und Schmerzen im Oberkörper." },
                     { name: "Tennis-Arm", url: "de/tennis-arm.html", img: "akupunktur-tennisarm-zuerich.webp", desc: "Therapie bei Epicondylitis und Sehnenreizungen." },
                     { name: "Arthritis / Arthrose", url: "de/arthritis.html", img: "akupunktur-arthritis-zuerich.webp", desc: "Behandlung von Gelenkentzündungen und Verschleiß." },
-                    { name: "Rheuma", url: "de/rheuma.html", img: "rheuma.webp", desc: "Ganzheitliche Begleitung bei rheumatischen Erkrankungen." },
+                    { name: "Rheuma", url: "de/rheuma.html", img: "akupunktur-rheuma-zuerich.webp", desc: "Ganzheitliche Begleitung bei rheumatischen Erkrankungen." },
                     { name: "Achillessehnen-Symptome", url: "de/achillessehnen-symptome.html", img: "achillessehnen.webp", desc: "Heilungsförderung bei Sehnenbeschwerden." },
                     { name: "Fersenschmerz", url: "de/fersenschmerz.html", img: "fersenschmerz.webp", desc: "Hilfe bei Fersensporn und Belastungsschmerz." }
                 ]},
