--- a/public/index.html
+++ b/public/index.html
@@ -73,7 +73,7 @@
                     { name: "Arthritis / Arthrose", url: "de/arthritis.html", img: "akupunktur-arthritis-zuerich.webp", desc: "Behandlung von Gelenkentzündungen und Verschleiß." },
                     { name: "Rheuma", url: "de/rheuma.html", img: "akupunktur-rheuma-zuerich.webp", desc: "Ganzheitliche Begleitung bei rheumatischen Erkrankungen." },
                     { name: "Achillessehnen-Symptome", url: "de/achillessehnen-symptome.html", img: "akupunktur-achillessehnen-symptome-zuerich.webp", desc: "Heilungsförderung bei Sehnenbeschwerden." },
-                    { name: "Fersenschmerz", url: "de/fersenschmerz.html", img: "fersenschmerz.webp", desc: "Hilfe bei Fersensporn und Belastungsschmerz." }
+                    { name: "Fersenschmerz", url: "de/fersenschmerz.html", img: "akupunktur-fersenschmerz-zuerich.webp", desc: "Hilfe bei Fersensporn und Belastungsschmerz." }
                 ]},
                 { name: "Innere Krankheiten", id: "inn", items: [
                     { name: "Bronchitis / Asthma", url: "de/bronchitis.html", img: "bronchitis.webp", desc: "Stärkung der Lungenfunktion und Atemwege." },
