--- a/public/index.html
+++ b/public/index.html
@@ -76,7 +76,7 @@
                     { name: "Fersenschmerz", url: "de/fersenschmerz.html", img: "akupunktur-fersenschmerz-zuerich.webp", desc: "Hilfe bei Fersensporn und Belastungsschmerz." }
                 ]},
                 { name: "Innere Krankheiten", id: "inn", items: [
-                    { name: "Bronchitis / Asthma", url: "de/bronchitis.html", img: "bronchitis.webp", desc: "Stärkung der Lungenfunktion und Atemwege." },
+                    { name: "Bronchitis / Asthma", url: "de/bronchitis.html", img: "akupunktur-asthma-zuerich.webp", desc: "Stärkung der Lungenfunktion und Atemwege." },
                     { name: "Harnwegsinfekte", url: "de/harnwegsinfekte.html", img: "harnwegsinfekte.webp", desc: "Natürliche Behandlung von Blasenentzündungen." },
                     { name: "Herzrhythmusstörungen", url: "de/herzrhythmusstoerungen.html", img: "herz.webp", desc: "Harmonisierung des Herz-Qi und Beruhigung." },
                     { name: "Bluthochdruck", url: "de/bluthochdruck.html", img: "bluthochdruck.webp", desc: "Unterstützende Regulation des Blutdrucks." },
