--- a/public/index.html
+++ b/public/index.html
@@ -78,7 +78,7 @@
                 { name: "Innere Krankheiten", id: "inn", items: [
                     { name: "Bronchitis / Asthma", url: "de/bronchitis.html", img: "akupunktur-asthma-zuerich.webp", desc: "Stärkung der Lungenfunktion und Atemwege." },
                     { name: "Harnwegsinfekte", url: "de/harnwegsinfekte.html", img: "akupunktur-harnwegsinfekte-zuerich.webp", desc: "Natürliche Behandlung von Blasenentzündungen." },
-                    { name: "Herzrhythmusstörungen", url: "de/herzrhythmusstoerungen.html", img: "herz.webp", desc: "Harmonisierung des Herz-Qi und Beruhigung." },
+                    { name: "Herzrhythmusstörungen", url: "de/herzrhythmusstoerungen.html", img: "akupunktur-herzrhythmusstoerungen-zuerich.webp", desc: "Harmonisierung des Herz-Qi und Beruhigung." },
                     { name: "Bluthochdruck", url: "de/bluthochdruck.html", img: "bluthochdruck.webp", desc: "Unterstützende Regulation des Blutdrucks." },
                     { name: "Verdauungsleiden", url: "de/magenleiden.html", img: "magen.webp", desc: "Hilfe bei Blähungen, Übelkeit und Reizdarm." }
                 ]},
