--- a/public/index.html
+++ b/public/index.html
@@ -80,7 +80,7 @@
                     { name: "Harnwegsinfekte", url: "de/harnwegsinfekte.html", img: "akupunktur-harnwegsinfekte-zuerich.webp", desc: "Natürliche Behandlung von Blasenentzündungen." },
                     { name: "Herzrhythmusstörungen", url: "de/herzrhythmusstoerungen.html", img: "akupunktur-herzrhythmusstoerungen-zuerich.webp", desc: "Harmonisierung des Herz-Qi und Beruhigung." },
                     { name: "Bluthochdruck", url: "de/bluthochdruck.html", img: "akupunktur-bluthochdruck-zuerich.webp", desc: "Unterstützende Regulation des Blutdrucks." },
-                    { name: "Verdauungsleiden", url: "de/magenleiden.html", img: "magen.webp", desc: "Hilfe bei Blähungen, Übelkeit und Reizdarm." }
+                    { name: "Verdauungsleiden", url: "de/magenleiden.html", img: "akupunktur-verdauungsleiden-zuerich.webp", desc: "Hilfe bei Blähungen, Übelkeit und Reizdarm." }
                 ]},
                 { name: "Gynäkologische Erkrankungen", id: "gyn", items: [
                     { name: "Menstruationsbeschwerden", url: "de/menstruationsbeschwerden.html", img: "menstruation.webp", desc: "Hilfe bei Schmerzen und Zyklusunregelmäßigkeiten." },
