--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
                     { name: "Verdauungsleiden", url: "de/magenleiden.html", img: "akupunktur-verdauungsleiden-zuerich.webp", desc: "Hilfe bei Blähungen, Übelkeit und Reizdarm." }
                 ]},
                 { name: "Gynäkologische Erkrankungen", id: "gyn", items: [
-                    { name: "Menstruationsbeschwerden", url: "de/menstruationsbeschwerden.html", img: "menstruation.webp", desc: "Hilfe bei Schmerzen und Zyklusunregelmäßigkeiten." },
+                    { name: "Menstruationsbeschwerden", url: "de/menstruationsbeschwerden.html", img: "akupunktur-menstruationsbeschwerden-zuerich.webp", desc: "Hilfe bei Schmerzen und Zyklusunregelmäßigkeiten." },
                     { name: "Schwangerschaft", url: "de/schwangerschaftsbeschwerden.html", img: "schwangerschaft.webp", desc: "Begleitung und Vorbereitung auf die Geburt." },
                     { name: "Unfruchtbarkeit", url: "de/unfruchtbarkeit.html", img: "unfruchtbarkeit.webp", desc: "Natürliche Unterstützung bei Kinderwunsch." },
                     { name: "Wechseljahre", url: "de/wechseljahresbeschwerden.html", img: "wechseljahre.webp", desc: "Linderung von Hitzewallungen und Symptomen." }
