--- a/public/index.html
+++ b/public/index.html
@@ -84,7 +84,7 @@
                 ]},
                 { name: "Gynäkologische Erkrankungen", id: "gyn", items: [
                     { name: "Menstruationsbeschwerden", url: "de/menstruationsbeschwerden.html", img: "akupunktur-menstruationsbeschwerden-zuerich.webp", desc: "Hilfe bei Schmerzen und Zyklusunregelmäßigkeiten." },
-                    { name: "Schwangerschaft", url: "de/schwangerschaftsbeschwerden.html", img: "schwangerschaft.webp", desc: "Begleitung und Vorbereitung auf die Geburt." },
+                    { name: "Schwangerschaft", url: "de/schwangerschaftsbeschwerden.html", img: "akupunktur-schwangerschaftsbeschwerden-zuerich.webp", desc: "Begleitung und Vorbereitung auf die Geburt." },
                     { name: "Unfruchtbarkeit", url: "de/unfruchtbarkeit.html", img: "unfruchtbarkeit.webp", desc: "Natürliche Unterstützung bei Kinderwunsch." },
                     { name: "Wechseljahre", url: "de/wechseljahresbeschwerden.html", img: "wechseljahre.webp", desc: "Linderung von Hitzewallungen und Symptomen." }
                 ]},
