--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
                     { name: "Menstruationsbeschwerden", url: "de/menstruationsbeschwerden.html", img: "akupunktur-menstruationsbeschwerden-zuerich.webp", desc: "Hilfe bei Schmerzen und Zyklusunregelmäßigkeiten." },
                     { name: "Schwangerschaft", url: "de/schwangerschaftsbeschwerden.html", img: "akupunktur-schwangerschaftsbeschwerden-zuerich.webp", desc: "Begleitung und Vorbereitung auf die Geburt." },
                     { name: "Unfruchtbarkeit", url: "de/unfruchtbarkeit.html", img: "akupunktur-unfruchtbarkeit-zuerich.webp", desc: "Natürliche Unterstützung bei Kinderwunsch." },
-                    { name: "Wechseljahre", url: "de/wechseljahresbeschwerden.html", img: "wechseljahre.webp", desc: "Linderung von Hitzewallungen und Symptomen." }
+                    { name: "Wechseljahre", url: "de/wechseljahresbeschwerden.html", img: "akupunktur-wechseljahresbeschwerden-zuerich.webp", desc: "Linderung von Hitzewallungen und Symptomen." }
                 ]},
                 { name: "Psychische Erkrankungen", id: "psy", items: [
                     { name: "Depression", url: "de/depression.html", img: "depression.webp", desc: "Stimmungsaufhellung und energetische Balance." },
