--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
                     { name: "Wechseljahre", url: "de/wechseljahresbeschwerden.html", img: "akupunktur-wechseljahresbeschwerden-zuerich.webp", desc: "Linderung von Hitzewallungen und Symptomen." }
                 ]},
                 { name: "Psychische Erkrankungen", id: "psy", items: [
-                    { name: "Depression", url: "de/depression.html", img: "depression.webp", desc: "Stimmungsaufhellung und energetische Balance." },
+                    { name: "Depression", url: "de/depression.html", img: "akupunktur-depression-zuerich.webp", desc: "Stimmungsaufhellung und energetische Balance." },
                     { name: "Schlafstörung", url: "de/schlafstoerung.html", img: "schlafstoerung.webp", desc: "Besser ein- und durchschlafen mit Akupunktur." },
                     { name: "Burn-out-Syndrom", url: "de/burn-out-syndrom.html", img: "burnout.webp", desc: "Regeneration bei tiefer Erschöpfung." }
                 ]},
