--- a/public/index.html
+++ b/public/index.html
@@ -90,7 +90,7 @@
                 ]},
                 { name: "Psychische Erkrankungen", id: "psy", items: [
                     { name: "Depression", url: "de/depression.html", img: "akupunktur-depression-zuerich.webp", desc: "Stimmungsaufhellung und energetische Balance." },
-                    { name: "Schlafstörung", url: "de/schlafstoerung.html", img: "schlafstoerung.webp", desc: "Besser ein- und durchschlafen mit Akupunktur." },
+                    { name: "Schlafstörung", url: "de/schlafstoerung.html", img: "akupunktur-schlafstoerung-zuerich.webp", desc: "Besser ein- und durchschlafen mit Akupunktur." },
                     { name: "Burn-out-Syndrom", url: "de/burn-out-syndrom.html", img: "burnout.webp", desc: "Regeneration bei tiefer Erschöpfung." }
                 ]},
                 { name: "Allergie / Hauterkrankungen", id: "haut", items: [
