--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                     { name: "Burn-out-Syndrom", url: "de/burn-out-syndrom.html", img: "akupunktur-burnout-zuerich.webp", desc: "Regeneration bei tiefer Erschöpfung." }
                 ]},
                 { name: "Allergie / Hauterkrankungen", id: "haut", items: [
-                    { name: "Heuschnupfen", url: "de/heuschnupfen.html", img: "heuschnupfen.webp", desc: "Symptomlinderung bei Pollenallergie." },
+                    { name: "Heuschnupfen", url: "de/heuschnupfen.html", img: "akupunktur-heuschnupfen-zuerich.webp", desc: "Symptomlinderung bei Pollenallergie." },
                     { name: "Neurodermitis / Ekzem", url: "de/neurodermitis.html", img: "haut.webp", desc: "Hautberuhigung und Stärkung der Barriere." },
                     { name: "Akne / Psoriasis", url: "de/akne.html", img: "akne.webp", desc: "Ganzheitliche Behandlung von Hautproblemen." }
                 ]},
