--- a/public/index.html
+++ b/public/index.html
@@ -96,7 +96,7 @@
                 { name: "Allergie / Hauterkrankungen", id: "haut", items: [
                     { name: "Heuschnupfen", url: "de/heuschnupfen.html", img: "akupunktur-heuschnupfen-zuerich.webp", desc: "Symptomlinderung bei Pollenallergie." },
                     { name: "Neurodermitis / Ekzem", url: "de/neurodermitis.html", img: "akupunktur-ekzem-zuerich.webp", desc: "Hautberuhigung und Stärkung der Barriere." },
-                    { name: "Akne / Psoriasis", url: "de/akne.html", img: "akne.webp", desc: "Ganzheitliche Behandlung von Hautproblemen." }
+                    { name: "Akne / Psoriasis", url: "de/akne.html", img: "akupunktur-akne-zuerich.webp", desc: "Ganzheitliche Behandlung von Hautproblemen." }
                 ]},
                 { name: "Sonstiges", id: "sonst", items: [
                     { name: "Nikotinentwöhnung", url: "de/nikotinentwoehnung.html", img: "rauchen.webp", desc: "Unterstützung beim Rauchstopp." },
