--- a/public/index.html
+++ b/public/index.html
@@ -99,7 +99,7 @@
                     { name: "Akne / Psoriasis", url: "de/akne.html", img: "akupunktur-akne-zuerich.webp", desc: "Ganzheitliche Behandlung von Hautproblemen." }
                 ]},
                 { name: "Sonstiges", id: "sonst", items: [
-                    { name: "Nikotinentwöhnung", url: "de/nikotinentwoehnung.html", img: "rauchen.webp", desc: "Unterstützung beim Rauchstopp." },
+                    { name: "Nikotinentwöhnung", url: "de/nikotinentwoehnung.html", img: "akupunktur-nikotinentwöhnung-zuerich.webp", desc: "Unterstützung beim Rauchstopp." },
                     { name: "Übergewicht", url: "de/uebergewicht.html", img: "gewicht.webp", desc: "Stoffwechselaktivierung zur Gewichtsreduktion." },
                     { name: "Immunsystem", url: "de/immunsystem.html", img: "immun.webp", desc: "Allgemeine Stärkung der Abwehrkräfte." }
                 ]}
