--- a/public/index.html
+++ b/public/index.html
@@ -100,7 +100,7 @@
                 ]},
                 { name: "Sonstiges", id: "sonst", items: [
                     { name: "Nikotinentwöhnung", url: "de/nikotinentwoehnung.html", img: "akupunktur-nikotinentwöhnung-zuerich.webp", desc: "Unterstützung beim Rauchstopp." },
-                    { name: "Übergewicht", url: "de/uebergewicht.html", img: "gewicht.webp", desc: "Stoffwechselaktivierung zur Gewichtsreduktion." },
+                    { name: "Übergewicht", url: "de/uebergewicht.html", img: "akupunktur-uebergewicht-zuerich.webp", desc: "Stoffwechselaktivierung zur Gewichtsreduktion." },
                     { name: "Immunsystem", url: "de/immunsystem.html", img: "immun.webp", desc: "Allgemeine Stärkung der Abwehrkräfte." }
                 ]}
             ]
